<?xml version="1.0"?>
<package format="2">

  <name>rtps_republisher</name>
  <version>0.0.0</version>
  <description>The rtps_republisher package</description>

  <author email="bednaj14@fel.cvut.cz">Jan Bednar</author>
  <maintainer email="bednaj14@fel.cvut.cz">Jan Bednar</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <build_depend>positioning_systems_ros</build_depend>

  <exec_depend>positioning_systems_ros</exec_depend>
</package>
